# dspy-codex-auth

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-10-websocket-transport.md
docs/superpowers/specs/: 2026-07-10-websocket-transport-design.md
src/dspy_codex_auth/: LICENSE  THIRD_PARTY_NOTICES.md  __init__.py  auth.py  lm.py  responses_websocket.py
tests/: smoke_test.py  test_auth.py  test_live_websocket.py  test_lm.py  test_responses_websocket.py
