[project]
name = "dspy-codex-auth"
version = "0.1.0"
description = "DSPy integration for ChatGPT Codex subscription-backed language models"
readme = "README.md"
authors = [
    { name = "hrbatra", email = "hrbatra@utexas.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.2.0",
    "dspy-lm-auth>=0.1.3",
    "litellm>=1.82.6",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
